--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"@shelf/text-normalizer": "^2.0.1",
+		"chrono-node": "^2.8.3",
 		"normalize-text": "^2.6.0",
 		"puppeteer": "^24.14.0",
 		"title": "^4.0.1"
